--- a/.github/workflows/tf_plan_run.yml
+++ b/.github/workflows/tf_plan_run.yml
@@ -49,5 +49,5 @@ jobs:
       run: terraform validate    
 
     - name: Terraform Plan
-      run: terraform plan -var-file=tfvars/${{ env.TF_WORKSPACE }}.tfvars -out=terraform.plan
+      run: terraform plan -var-file=vars/${{ env.TF_WORKSPACE }}.tfvars -out=terraform.plan
       
