--- a/.github/workflows/tf_plan_run.yml
+++ b/.github/workflows/tf_plan_run.yml
@@ -1,10 +1,10 @@
 on:
-  #push:
-   # branches:
+  push:
+    branches:
    #   - 'main'
    #   - '!test'
    #   - '!development'
-   #  - '*'  smallchange
+    - '*' 
    
   workflow_dispatch:
 
@@ -20,6 +20,9 @@ env:
   ARM_TENANT_ID: a4d4d5cd-20cf-444e-bfe7-3d3ecef3fe94
   ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
   ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
 
 
 jobs:
@@ -41,6 +44,13 @@ jobs:
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: eu-west-2
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1.3.2
