--- a/.github/workflows/tf_plan_run.yml
+++ b/.github/workflows/tf_plan_run.yml
@@ -22,7 +22,7 @@ env:
   ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
+  AWS_DEFAULT_REGION: eu-west-1
 
 
 jobs:
